[package]
edition = "2024"
name = "conspire"
publish = false
version = "0.4.1"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
# conspire = { version = "=0.5.15", features = ["doc", "fem"] }
conspire = { branch = "main", git = "https://github.com/mrbuche/conspire.rs.git", features = ["doc", "fem"] }

[dependencies]
# conspire = { version = "=0.5.15", features = ["doc", "fem"] }
conspire = { branch = "main", git = "https://github.com/mrbuche/conspire.rs.git", features = ["doc", "fem"] }
ndarray = { version = "=0.17.2" }
numpy = { version = "=0.27.1" }
pyo3 = { features = ["extension-module"], version = "=0.27.2" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
